edited after checking

--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -26,5 +26,5 @@ block content
             a.authorization__btn(href="#") Авторизоваться
         .copyright
             ul.copyright__list
-                each item in ['© Владимир Астахов', 'создано с любовью в LoftSchool', '2016']
+                each item in ['© Мария Молчанова', 'создано с любовью в LoftSchool', '2018']
                     li.copyright__item #{item}
