--- a/src/templates/pages/my-works.pug
+++ b/src/templates/pages/my-works.pug
@@ -72,8 +72,8 @@ block content
                             input.form__input(type="email" id="email" name="email" placeholder="Email")
                             textarea.form__input.form__textarea(name="comment" id="comment" placeholder="Ваше сообщение")
                         .form__btns
-                            input.form__btn(type="submit" name="submit" value="Отправить")
-                            input.form__btn(type="reset" name="reset" value="Очистить")
+                            button.form__btn(type="submit" name="submit" value="Отправить") Отправить
+                            button.form__btn(type="reset" name="reset" value="Очистить") Очистить
             svg.arrow.arrow--up.my-block__arrow(width="25" height="15")
                 use(xlink:href="assets/images/sprite.svg#arrow_down")
     
