--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -9,7 +9,7 @@
 
 .wrapper {
     height: 100vh;
-    min-height: 100%;
+    min-height: 500px;
     position: relative;
     display: flex;
     flex-direction: column;
