--- a/src/templates/common/footer.pug
+++ b/src/templates/common/footer.pug
@@ -10,8 +10,8 @@
     .footer__column
         .footer__content
             .footer__text.footer__text--white Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. 
-            .footer__text © Владимир Астахов
-            .footer__text Создано с любовью в LoftSchool | 2016 
+            .footer__text © Мария Молчанова
+            .footer__text Создано с любовью в LoftSchool | 2018 
     .footer__column
         .footer__content
             ul.footer__nav-list
