--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,5 +1,6 @@
 .desert {
     background: url('../images/sand.jpg') repeat-x bottom left;
+    background-size: contain;
     height: 100%;
     width: 6110px;
     position: fixed;
