--- a/src/styles/common/user.scss
+++ b/src/styles/common/user.scss
@@ -23,6 +23,11 @@
     font-weight: 500;
     font-size: 28px;
 
+    &--header {
+        font-size: 35px;
+        margin-top: 8px;
+    }
+    
     &--blog {
         font: 500 63px 'sansus_webissimo';
         margin: 0;
