--- a/src/templates/common/footer.pug
+++ b/src/templates/common/footer.pug
@@ -8,10 +8,11 @@
 
 .footer
     .footer__column
-        .footer__content
+        .footer__content.footer__content--left
             .footer__text.footer__text--white Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. 
-            .footer__text © Мария Молчанова
-            .footer__text Создано с любовью в LoftSchool | 2018 
+            .footer__copyright
+                .footer__text © Мария Молчанова 
+                .footer__text Создано с любовью в LoftSchool | 2018 
     .footer__column
         .footer__content
             ul.footer__nav-list
