--- a/src/styles/common/footer.scss
+++ b/src/styles/common/footer.scss
@@ -1,23 +1,48 @@
 .footer {
     width: 100%;
     height: 145px;
-    background-color: rgba($dark, .8);
+    background-color: rgba($dark, .9);
     display: flex;
     position: absolute;
     bottom: 0;
     color: $light-grey;
     font: 300 16px 'roboto';
+
+    @include tablets {
+        height: 225px;
+        flex-wrap: wrap;
+        font: 300 14px 'roboto';
+    }
 }
 
 .footer__column {
     display: flex;
     align-items: center;
-    width: 33.3%;
-    justify-content: space-between;
+    flex: 0 0 33.3%;
+
+    @include smallDesktop {
+        flex: 1 1 auto;
+    }
+
+    @include tablets {
+        height: 95px;
+        justify-content: center;
+    }
 
     &:first-child .footer__content {
         border: none;
+
+        @include tablets {
+            width: 93%;
+            border-bottom: 1px solid $light-grey;
+        }
     }    
+
+    &:last-child {
+        @include tablets {
+            justify-content: flex-end;
+        }
+    }   
 }
 
 .footer__content {
@@ -27,35 +52,67 @@
     height: 100px;
     border-left: 1px solid $light-grey;
     margin: 25px 0;
-    padding: 0 30px;
-    width: 400px;
+    padding: 5px 35px 0 30px;
     max-width: 100%;
+
+    @include tablets {
+        border: none;
+        margin: 0;
+        padding: 5px 10px 0 10px;
+        justify-content: flex-start;
+    }
+
+    &--left {
+        width: 415px;
+       
+        @include tablets {
+            width: 100%;
+            justify-content: space-around;
+            align-items: center;
+        }
+    }
 }
 
 .footer__nav-list {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .footer__nav-item {
+    margin-right: 37px;
+
+    &:last-child {
+        margin-right: 0;
+    }
+
     a {
         text-decoration: none;
         color: #fff;
         font: 500 16px 'roboto';
     }
     a:hover {
-        text-decoration: underline;
+        color: $rust;
     }
 
 }
 
 .footer__text {
-
-
+    margin-right: 5px;
     &--white {
         color: #fff;
     }
 }
+
+.footer__copyright {
+    display: flex;
+    flex-direction: column;
+
+    @include tablets {
+        flex-direction: row;
+    }
+}
+
 .footer__socials {
     .socials__icon {
         fill: $light-grey; 
@@ -66,4 +123,10 @@
             cursor: pointer;
         }
     }
+}
+
+.footer__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
