--- a/src/styles/common/technologies.scss
+++ b/src/styles/common/technologies.scss
@@ -1,49 +1,75 @@
 .technologies {
-
+    width: 100%;
+    margin-bottom: 38px;
 }
 
 .technologies__title {
     font: 500 28px 'roboto';
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     display: inline-flex;
+
+    @include tablets {
+        font: 500 21px 'roboto';
+    }
+}
+
+.technologies__item {
+    margin-bottom: 33px;
+
+    @include tablets {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+    }
 }
 
 .diagram__circle-block {
     fill: none;
-    stroke-width: 15;
+    stroke-width: 20;
 }
 
 .diagram__circle-first {
-stroke: #dfdcd5;
+    stroke: #dfdcd5;
 }
 
 .diagram__circle-second {
-stroke: $yellow;
-stroke-dasharray: .0010 282.6;
-transition: all 1s;
+    stroke: $yellow;
+    stroke-dasharray: .0010 282.6;
+    transition: all 1s;
 }
 
 .diagram__item {
-position: relative;
-display: inline-block;
-width: 130px;
-height: 130px;
+    position: relative;
+    display: inline-block;
+    width: 120px;
+    height: 120px;
+    margin-right: 33px;
+
+    &:last-child {
+        margin-right: 0;
+    }
+
+    @include smallDesktop {
+        width: 110px;
+        height: 110px;
+    }
 }
 
 .diagram__text {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-text-align: center;
-font: 500 14px 'roboto';
-color: $yellow;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font: 500 14px 'roboto';
+    color: $yellow;
 }
 .diagram__circle-block:hover .circle-0 {
     stroke-dasharray: .001 282.6;
 }
 .diagram__circle-block:hover .circle-5 {
-stroke-dasharray: 14.13 282.6;
+    stroke-dasharray: 14.13 282.6;
 }
 .diagram__circle-block:hover .circle-10 {
     stroke-dasharray: 28.26 282.6;
