--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -4,17 +4,36 @@
     display: flex;
     color: $dark;
     height: 100%;
+
+    @include tablets {
+        flex-direction: column;
+    }
 }
 
 .about__column {
     width: 50%;
     display: flex;
-    // height: 100%;
+    flex-direction: column;
+    // align-items: center;
+
+    @include tablets {
+        width: 100%;
+        align-items: center;
+    }
 }
 
 .about__column--left {
     background-color: $bg;
+    flex-direction: row;
+    align-items: flex-start;
+    flex: 0 0 auto;
+    padding-right: 15px;
 
+    @include smallDesktop {
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0;
+    }
 }
 
 .about__column--right {
@@ -24,25 +43,101 @@
 .about__block {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
-    padding: 0 2%;
+    padding: 0 5px;
+
+    @include tablets {
+        width: 480px;
+        margin-bottom: 10px;
+    }
+
+    &--right {
+        @include tablets {
+            width: 600px;
+            margin-top: 45px;
+        }        
+    }
+}
+
+.about__title {
+    margin-bottom: 32px;
+    margin-top: -15px;
+    max-width: 430px;
+
+    @include tablets {
+        margin-top: 20px;
+    }
 }
 
 .about__img {
-    width: 25vw;
-    max-height: 25vw;
+    width: 100%;
     overflow: hidden;
+    margin-top: 7px;
+    margin-bottom: 30px;
+    height: 21.5vw;
+
+    @include smallDesktop {
+        margin-top: 0;
+        width: 76%;
+        height: 32vw;
+    }
+
+    @include tablets {
+       width: 100%;
+       height: 53vw;
+       margin-bottom: 35px;
+    }
 }
 
 .about__pic {
     width: 100%;
-    transform: translateY(-27%);
 }
 
-.map {
-    &:after {
-        content: "";
-        display: block;
-        height: 145px;
+.about__subtitle {
+    margin-bottom: 25px;
+    max-width: 350px;
+
+    &--left {
+        margin-bottom: 5px;
+        @include tablets {
+            margin-bottom: -10px;
+        } 
+    }  
+
+    @include tablets {
+        max-width: 300px;
+        margin-bottom: 8px;
     } 
+}
+
+.about__desc {
+    line-height: 1.5;
+    margin-bottom: 45px;
+
+    &--left {
+        @include smallDesktop {
+            width: 76%;
+            margin-bottom: 18px;
+        }
+        @include tablets {
+            width: 100%;
+            line-height: 1.71;
+         }
+    }  
+
+    @include tablets {
+        width: 480px;
+    }
+}
+
+.about__content {
+    margin-left: 32px;
+
+    @include tablets {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0;
+    }
 }
