--- a/src/templates/pages/about.pug
+++ b/src/templates/pages/about.pug
@@ -24,23 +24,42 @@ block content
             polygon.triangle__part.triangle__part--biege(points="1000,0   1000,86   500,86   500,75.5")
     .about
         .about__column.about__column--left
+            h1.about__title.title-dec Обо мне
             .about__block
-                h1.about__title.title-dec Обо мне
-            .about__block
-                .about__img 
-                    img.about__pic(src="assets/images/photo.jpg")
-                h2.about__subtitle.subtitle-dec Кто я
-                .about__desc
+                .about__img(style="background-image: url(assets/images/photo.jpg); background-position: 50% 38%;")
+                    img.about__pic.visually-hidden(src="assets/images/photo.jpg" alt="Аватар")  
+                h2.about__subtitle--left.subtitle-dec Кто я
+                .about__desc.about__desc--left
                     p Я веб разработчик из Новосибирска. Мне 27 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
                     p Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
         .about__column.about__column--right
-            .about__block
+            .about__block.about__block--right
                 h2.about__subtitle.subtitle-dec Чем я могу быть вам полезна
-                .about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать несложные задачи на Backend. Но давайте по порядку.
-                include ../common/technologies.pug
-    .map-wrap 
-        .map(id="map")
+                .about__content
+                    .about__desc Больше всего меня привлекет Frontend разработка, но я также знакома и могу решать несложные задачи на Backend. Но давайте по порядку.
+                    include ../common/technologies.pug
+    .map.map-wrap 
+        .map__elem(id="map")
             script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfEauhtted31QfXMczZ3OYgeBmTErYxMM&callback=initMap", async defer)
-
+        .map__contacts
+            h2.subtitle-dec.map__subtitle контакты
+            .map__desc
+                .map__row
+                    svg.map__icon(height="20" width="20")
+                        use(xlink:href="assets/images/sprite.svg#skype")
+                    .map__text +7 983 319 37 93
+                .map__row
+                    svg.map__icon(height="20" width="20")
+                        use(xlink:href="assets/images/sprite.svg#envelope")
+                    .map__text molchanova.m2903@gmail.com
+                .map__row
+                    svg.map__icon(height="20" width="20")
+                        use(xlink:href="assets/images/sprite.svg#phone")
+                    .map__text 
+                        a(href="tel:+79833193793") +7 983 319 37 93
+                .map__row
+                    svg.map__icon(height="20" width="20")
+                        use(xlink:href="assets/images/sprite.svg#map_marker")
+                    .map__text Новосибирск, ул. 1905 года
                     
 
