--- a/src/styles/common/map.scss
+++ b/src/styles/common/map.scss
@@ -8,6 +8,10 @@
     @include tablets {
         height: 745px;
     }
+
+    @include phones {
+        height: 1195px;
+    }
 }
 
 #map {
@@ -33,7 +37,15 @@
         &:after {
             content: "";
             display: block;
-            height: 225px;
+            height: 223px;
+        } 
+    }
+
+    @include phones {
+        &:after {
+            content: "";
+            display: block;
+            height: 345px;
         } 
     }
 }
@@ -50,14 +62,30 @@
     transform: translate(-48%,-70%);
     background-color: rgba(#fff, .8);
     border-radius: 10px;
+    font: 400 16px 'roboto';
 
     @include smallDesktop {
         transform: translate(-50%,-52%);
     }
+
+    @include tablets {
+        transform: translate(-50%,-92%);
+        width: 350px;
+    }
+
+    @include phones {
+        transform: translate(-50%, 0%);
+        top: 0%;
+    }
 }
 
 .map__subtitle {
+    font: 500 35px 'sansus_webissimo';
     margin-bottom: 0px; 
+
+    @include tablets {
+        margin-top: 10px;
+    }
 }
 
 .map__row {
@@ -71,6 +99,10 @@
     justify-content: space-between;
     flex-basis: 52.5%;
     margin-bottom: 20px;
+
+    @include tablets {
+        margin-bottom: 15px;
+    }
 }
 
 
