--- a/src/styles/common/socials.scss
+++ b/src/styles/common/socials.scss
@@ -3,6 +3,10 @@
     flex-direction: row;
     justify-content: space-between;
     width: 140px;
+
+    @include phones {
+        width: 130px;
+    }
 }
 
 .socials__item {
@@ -16,5 +20,10 @@
         transition: .5s;
         fill: $rust;
         cursor: pointer;
+    }
+
+    @include phones {
+        width: 22px;
+        height: 22px;
     }
 }
