--- a/src/templates/common/footer.pug
+++ b/src/templates/common/footer.pug
@@ -9,12 +9,12 @@
 .footer
     .footer__column
         .footer__content.footer__content--left
-            .footer__text.footer__text--white Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. 
+            .footer__text.footer__text--white Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. 
             .footer__copyright
                 .footer__text © Мария Молчанова 
                 .footer__text Создано с любовью в LoftSchool | 2018 
     .footer__column
-        .footer__content
+        .footer__content.footer__content--center
             ul.footer__nav-list
                 each item in nav
                     li.footer__nav-item 
@@ -22,9 +22,43 @@
             .footer__socials
                 include ../common/socials.pug
     .footer__column
-        .footer__content
+        .footer__content.footer__content--right
             .footer__contacts
                 .footer__text Контакты:
                 .footer__text molchanova.m2903@gmail.com
                 .footer__text +7 983 319 37 93
                 .footer__text Новосибирск, ул. 1905 года
+
+
+
+
+//- - 
+//-     var nav = [
+//-         ['my-works', 'Мои работы'],
+//-         ['about', 'Обо мне'],
+//-         ['blog', 'Блог'],
+//-         ['authorization', 'Авторизация']
+//-     ]
+
+//- .footer
+//-     .footer__column
+//-         .footer__content.footer__content--left
+//-             .footer__text.footer__text--white Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. 
+//-             .footer__copyright
+//-                 .footer__text © Мария Молчанова 
+//-                 .footer__text Создано с любовью в LoftSchool | 2018 
+//-     .footer__column
+//-         .footer__content.footer__content--center
+//-             ul.footer__nav-list
+//-                 each item in nav
+//-                     li.footer__nav-item 
+//-                         a(href="./"+item[0]+".html") #{item[1]}
+//-             .footer__socials
+//-                 include ../common/socials.pug
+//-     .footer__column
+//-         .footer__content.footer__content--right
+//-             .footer__contacts
+//-                 .footer__text Контакты:
+//-                 .footer__text molchanova.m2903@gmail.com
+//-                 .footer__text +7 983 319 37 93
+//-                 .footer__text Новосибирск, ул. 1905 года
