--- a/src/templates/pages/my-works.pug
+++ b/src/templates/pages/my-works.pug
@@ -23,8 +23,8 @@ block content
 
     .works 
         h1.works__title.title-dec Мои работы
-        svg.title-shadow(width="300")
-            use(xlink:href="assets/images/sprite.svg#works_header")
+            svg.title-shadow(width="300")
+                use(xlink:href="assets/images/sprite.svg#works_header")
         .works__content
             .works__block
                 h2.works__subtitle.subtitle-dec Сайт школы онлайн образования
@@ -33,9 +33,9 @@ block content
                     svg.icon(height="20" width="20")
                         use(xlink:href="assets/images/sprite.svg#link")
             .works__main
-                .works__wrap
-                    .works__sub
-                    .works__sub
+            .works__sub-wrap
+                .works__sub
+                .works__sub
 
     .my-block
         h1.my-block__title.title-dec Что обо мне говорят
