--- a/src/styles/common/technologies.scss
+++ b/src/styles/common/technologies.scss
@@ -18,13 +18,12 @@
 }
 
 .technologies__item {
-    margin-bottom: 33px;
-
     @include tablets {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 40px;
+
     }
     @include phones {
         margin-bottom: -2px;
@@ -38,12 +37,10 @@
 }
 
 .diagram__list {
-    @include phones {
-        max-width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .diagram__circle-block {
@@ -66,15 +63,20 @@
     display: inline-block;
     width: 120px;
     height: 120px;
-    margin-right: 33px;
+    margin-bottom: 33px;
 
-    &:last-child {
-        margin-right: 0;
-    }
 
     @include smallDesktop {
         width: 110px;
         height: 110px;
+    }
+
+    @include tablets {
+        margin-right: 33px;
+
+        &:last-child {
+            margin-right: 0;
+        }    
     }
 
     @include phones {
