--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -88,6 +88,7 @@
     margin-top: 7px;
     margin-bottom: 30px;
     height: 21.5vw;
+    background-repeat: no-repeat;
 
     @include smallDesktop {
         margin-top: 0;
