--- a/src/styles/pages/my-works.scss
+++ b/src/styles/pages/my-works.scss
@@ -12,10 +12,18 @@
 
 .works__content {
     width: 100%;
-    height: 100%;
+    height: 750px;
     display: flex;
-    flex-direction: row;
-    min-height: 750px;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    @include tablets {
+        height: 1015px;
+    }
+
+    @include tablets {
+        height: 567px;
+    }
 }
 
 .works__block {
@@ -25,10 +33,49 @@
     justify-content: center;
     align-items: center;
     background-color: $bg-beige;
+    height: 100%;
+
+    @include tablets {
+        order: 2;
+        width: 100%;
+        height: 268px;
+    }
+
+    @include phones {
+        height: 212px;
+    }
+}
+
+.works__title {
+    margin-top: 35px;
+    margin-bottom: 43px;
+
+    @include tablets {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    @include phones {
+        margin-top: 12px;
+    }
 }
 
 .works__subtitle {
     max-width: 400px;
+    margin-top: -10px;
+    margin-bottom: 30px;
+
+    @include tablets {
+        margin-top: -25px;
+        max-width: 550px;
+        margin-bottom: 5px;
+    }
+
+    @include phones {
+        max-width: 280px;
+        margin-bottom: 15px;
+        margin-top: -5px;
+    }
 }
 
 .works__main {
@@ -37,23 +84,62 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: green;
+    height: 75%;
+
+    @include tablets {
+        order: 1;
+        width: 100%;
+        height: 530px;
+    }
+
+    @include phones {
+        height: 260px;
+    }
+}
+
+.works__sub-wrap {
+    background-color: red;
+    height: 25%;
+    width: 50%;
+
+    @include tablets {
+        order: 3;
+        width: 100%;
+        height: 217px;
+    }
+
+    @include phones {
+        height: 95px;
+    }
 }
 
 .works__desc {
     display: inline-flex;
     width: 420px;
+    height: 53px;
     justify-content: center;
     color: $rust;
     border-top: 1px solid #aeaeab;
     border-bottom: 1px solid #aeaeab;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+    align-items: center;
+
+    @include tablets {
+        margin-bottom: 20px;
+    }
+
+    @include phones {
+        font-size: 14px;
+        height: 32px;
+    }
 }
 
 .works__button {
     text-decoration: none;
     color: #fff;
     background-color: $yellow;
-    padding: 10px 20px 10px 50px;
+    padding: 11px 20px 11px 50px;
     display: block;
     border-radius: 5px;
     position: relative;
@@ -62,8 +148,11 @@
         background-color: $rust;
         transition: .5s;
     }
-}
 
+    @include phones {
+        font-size: 14px;
+    }
+}
 
 .my-block {
     width: 100%;
@@ -76,15 +165,46 @@
     height: 100%;
     overflow: hidden;
     
-  &:after {
-    content: "";
-    display: block;
-    height: 145px;
-  } 
+    &:after {
+        content: "";
+        display: block;
+        height: 145px;
+    } 
+
+    @include tablets {
+        &:after {
+            content: "";
+            display: block;
+            height: 223px;
+        } 
+    }
+
+    @include phones {
+        &:after {
+            content: "";
+            display: block;
+            height: 345px;
+        } 
+    }
 }
 
 .my-block__title {
     max-width: 500px;
+    margin-top: 60px;
+    line-height: 1.05;
+    margin-bottom: 60px;
+
+    @include tablets {
+        max-width: 400px;
+        margin-top: 40px;
+        margin-bottom: 43px;
+    }
+
+    @include phones {
+        line-height: 1.2;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
 }
 
 .reviews {
@@ -92,43 +212,141 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 890px;
+    padding-left: 20px;
+
+    @include tablets {
+        height: 812px;
+    }
+
+    @include phones {
+        height: 966px;
+    }
 }
 
 .reviews__list {
     display: flex;
     justify-content: center;
+    margin-left: -10px;
+    margin-bottom: 72px;
+    max-width: 100%;
+
+    @include tablets {
+        margin-left: -40px;
+        margin-bottom: 55px;
+    }
+
+    @include phones {
+        margin: 0;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+}
+
+.reviews__quote {
+    margin-bottom: 0;
 }
 
 .reviews__item {
     max-width: 370px;
+
+    &:first-child {
+        margin-right: 30px;
+    }
+
+    @include tablets {
+        max-width: 330px;
+
+        &:first-child {    
+            margin-right: 40px;
+            margin-left: 20px;
+        }
+    }
+
+    @include phones {
+        width: 94%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+
+        &:first-child {
+            margin: 0;
+            margin-bottom: 30px;
+        }
+    }
 }
 
 .reviews__text {
     font: 300 16px 'roboto';
+    line-height: 1.625;
+    margin-bottom: 22px;
+
+    @include tablets {
+        font: 300 14px 'roboto';
+        line-height: 1.71;
+        margin-bottom: 15px;
+    }
+
+    @include phones {
+        margin-bottom: 0;
+    }
 }
 
 .reviews__author {
     display: flex;
+
+    @include phones {
+        width: 100%;
+    }
 }
 
 .reviews__avatar {
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     overflow: hidden;
+
+    @include phones {
+        width: 50px;
+        height: 50px;
+    }
 }
 
 .reviews__info {
     color: $rust;
     font: 400 16px 'roboto';
+    margin-top: 15px;
+    margin-left: 22px;
+
+    @include tablets {
+        font: 300 14px 'roboto';
+    }
+
+    @include phones {
+        margin-top: 0;
+    }
 }
 
 .reviews__name {
     font: 700 16px 'roboto';
+
+    @include tablets {
+        font: 700 14px 'roboto';
+        line-height: 1.71;
+    }
 }
 
 .reviews__pic--first {
     transform: translate(0, -10px);
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form__wrap {
@@ -136,34 +354,56 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 440px;
+    height: 435px;
+    width: 380px;
     background-color: rgba(#fff, .15);
     border-radius: 5px;
     overflow: hidden;
+
+    @include phones {
+        width: 300px;
+        height: 412px;
+    }
 }
 
 .form__content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 25px 7px 0 7px;
+
+    @include phones {
+        margin: 0;
+        margin-top: 25px;
+        width: 100%;
+    }
+}
+
+.form__subtitle {
+    margin-bottom: 22px;
 }
 
 .form__input {
-    height: 50px;
-    width: 100%;
+    height: 45px;
+    width: 93%;
     border: none;
     border-radius: 5px;
-    margin-bottom: 15px;
-    padding: 10px;
+    margin-bottom: 20px;
+    padding: 10px 17px;
   
     &:focus {
       outline: none;
       border: 2px solid $yellow;
     }
+
+    @include phones {
+        margin-bottom: 20px;
+        width: 87%;
+    }
 }
  
 .form__textarea {
-    height: 110px;
+    height: 140px;
     resize: none;
 }
 
@@ -178,7 +418,7 @@
 .form__btn {
     border: 0px;
     border-left: 2px solid #fff; 
-    flex: 1 1 auto;
+    flex: 1 1 50%;
     display: inline-block;
     text-decoration: none;
     color: #fff;
@@ -194,5 +434,25 @@
     }
     &:first-child {
         border: 0px;
+    }
+
+    @include phones {
+        font: 500 14px 'roboto';
+        padding: 13px 31px;
+    }
+}
+
+.my-block__arrow {
+    position: absolute;
+    bottom: 210px;
+    left: 50%;
+    z-index: 10;
+
+    @include tablets {
+        bottom: 270px;
+    }
+
+    @include phones {
+        bottom: 370px;
     }
 }
