--- a/src/templates/pages/blog.pug
+++ b/src/templates/pages/blog.pug
@@ -11,8 +11,8 @@ block content
         .header__content.header__content--min
             .header__user
                 .user
-                    .user__img
-                        img.user__pic(src="assets/images/photo.jpg")  
+                    .user__img.user__img--min(style="background-image: url(assets/images/photo.jpg); background-position: 50% 38%;")
+                        img.user__pic.visually-hidden(src="assets/images/photo.jpg" alt="Аватар")  
                     h1.user__title--blog.title-dec Блог
                     .user__info Статьи, которые я написала (на самом деле нет)
             svg.header__text.header__text--min(height="250")
