--- a/src/styles/common/user.scss
+++ b/src/styles/common/user.scss
@@ -13,6 +13,10 @@
     border-radius: 50%;
     margin-top: 40px;
     margin-bottom: 10px;
+
+    &--min {
+        margin-bottom: 20px;
+    }
 }
 
 .user__pic {
@@ -35,7 +39,13 @@
     
     &--blog {
         font: 500 63px 'sansus_webissimo';
-        margin: 0;
+        margin: -15px;
+    
+        @include phones {
+            margin-top: -3px;
+            margin-bottom: -10px;
+            font-size: 35px;
+        }
     }
 
 
@@ -48,6 +58,8 @@
 
     @include phones {
         font-size: 14px;
+        max-width: 200px;
         line-height: 2;
+        text-align: center;
     }
 }
