--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -29,6 +29,15 @@
     position: relative;
     background-color: rgba(#fff, .4);
     border-radius: 10px 10px 0 0;
+    transform: translateY(-1%);
+
+    @include tablets {
+        min-width: 350px;
+    }
+
+    @include phones {
+        min-width: 300px;
+    }
 }
 
 .main-block__info {
@@ -40,7 +49,7 @@
 
 .main-block__user {
     display: flex;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 
 .nav-block {
@@ -68,11 +77,22 @@
         font: 500 16px 'roboto';
         padding: 11px 31px;
         height: 100%;
+
+        @include tablets {
+            padding: 11px 26px;
+        }
+
+        @include phones {
+            font: 400 14px 'roboto';
+            padding: 11px 22px;
+        }
     }
+
     a:hover {
         background-color: $rust;
         transition: .5s;
     }
+
     &:first-child {
         border: 0px;
     }
@@ -80,8 +100,18 @@
 
 .authorization {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 21px;
+    right: 5.5%;
+
+    @include smallDesktop {
+        right: 1.6%;
+    }
+
+    @include phones {
+        transform: translate(50%, 0);
+        right: 50%;
+        top: 10px;
+    }
 }
 
 .authorization__btn {
@@ -89,7 +119,7 @@
     text-decoration: none;
     color: #fff;
     font: 400 16px 'roboto';
-    padding: 10px 25px;
+    padding: 10px 27px;
     border: 2px solid #fff;
     border-radius: 5px;
     &:hover {
@@ -97,25 +127,50 @@
         color: $rust;
         transition: .5s;
     }
+
+    @include phones {
+        font: 400 14px 'roboto';
+        padding: 9px 18px;
+    }
 }
 
 .copyright {
     position: absolute;
-    bottom: 0;
+    bottom: 37px;
     color: #fff;
     font: 400 16px 'roboto';
+
+
+    @include phones {
+        font: 300 14px 'roboto';
+        bottom: 9px;
+    }
 }
 
 .copyright__list{
     display: flex;
     justify-content: center;
+
+    @include phones {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
 
 .copyright__item {
     display: inline-block;
     padding: 0 4px; 
-    border-left: 2px solid #fff; 
+    border-right: 2px solid #fff; 
+
     &:first-child {
+        @include phones {
+            border: 0px;
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    &:last-child {
         border: 0px;
     }
 }
