--- a/src/styles/common/technologies.scss
+++ b/src/styles/common/technologies.scss
@@ -3,7 +3,11 @@
     margin-bottom: 38px;
 
     @include tablets {
-        margin-bottom: -3px;
+        margin-bottom: 5px;
+    }
+
+    @include phones {
+        margin-bottom: -7px;
     }
 }
 
@@ -18,12 +22,12 @@
 }
 
 .technologies__item {
+    width: 100%;
+    
     @include tablets {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 40px;
-
     }
     @include phones {
         margin-bottom: -2px;
@@ -43,6 +47,12 @@
     justify-content: flex-start;
 
     @include tablets {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+
+    @include tablets {
+        flex-wrap: wrap;
         justify-content: space-around;
     }
 }
@@ -81,6 +91,7 @@
 
     @include tablets {
         margin-right: 33px;
+        margin-bottom: 40px;
 
         &:last-child {
             margin-right: 0;
