page 'authorization' with adaptive

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -27,7 +27,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    background-color: rgba(#fff, .4);
+    background-color: rgba(rgb(215, 191, 155), .6);
     border-radius: 10px 10px 0 0;
     transform: translateY(-1%);
 
