--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,6 +13,7 @@
 
 //pages
 @import 'pages/index';
+@import 'pages/authorization';
 @import 'pages/about';
 @import 'pages/blog';
 @import 'pages/my-works';
